# 2048-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yaml
src/: arrow.rs  display.rs  lib.rs  main.rs  savedata.rs  tests.rs
