[package]
name = "_2048-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
bitcode = "0.4.0"
crossterm = { version = "0.27.0" }
directories = "5.0.1"
rand = "0.8.5"
ratatui = { version = "0.22.0", features = ["all-widgets"] }

[profile.release]
lto = true
panic = "abort"
strip = true
